--- a/index.html
+++ b/index.html
@@ -63,4 +63,4 @@
 <p>[Voltar ao início|Start]</p>
 <link rel="stylesheet" href="style.css">
 <script src="main.js"></script>
-<img src="guerra.png">
+<img src="imagens/guerra.png" alt="Descrição da Imagem" style="max-width:100%; height:auto;">
